# image-generator

./: Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: build-and-push-image.yaml
src/: generate.py
src/image_generator/: header_image_generator.py
