[project]
name = "act-image-generator"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
  { name = "Philipp Bergsmann", email = "me@ph-bergsmann.com" },
]
dependencies = [
  "Pillow==10.3.0",
]

[project.urls]
"Source code" = "https://github.com/aws-community-toolkit/image-generator"

[tool.hatch.version]
path = "src/image_generator/__about__.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "Dockerfile",
  "src/generate.py",
]

[tool.hatch.build.targets.wheel]
packages = ["src/image_generator"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"